(style) fixing overflow y home

--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,7 @@ html,
 body,
 #root {
   background-color: #efefef;
+  height: 100vh;
 }
 
 ul {
