--- a/src/layout/Navbar.module.css
+++ b/src/layout/Navbar.module.css
@@ -52,7 +52,8 @@
   }
 
   .navbar_link a {
-    font-size: 1rem;
+    font-size: 15px;
+    font-weight: 700;
   }
 
   .imgContainer {
