--- a/src/pages/Home.module.css
+++ b/src/pages/Home.module.css
@@ -58,6 +58,7 @@
     border-radius: 1rem;
     color: black;
     width: 100%;
+    height: 40rem;
   }
 
   .home_infos {
@@ -71,8 +72,8 @@
 
   .home_container img {
     margin-top: 3rem;
-    height: 60%;
-    width: 30rem;
+    height: 100%;
+    width: 17rem;
   }
 }
 
